# BMSTU-ML

./: .gitignore  README.md
Machine learning/: readme.md
Machine learning/coursework/: ТЗ.docx
Machine learning/coursework/code/: curve.py  go.mod  go.sum  hist.py  main.go  pyproject.toml
Machine learning/coursework/code/new/: 0.1m.txt  0.2m.txt  0.3m.txt  0.4m.txt  0.5m.txt  0.6m.txt  0.7m.txt  0.8m.txt  0.8m_2.txt  0.9m.txt  1.0m.txt  1.1m.txt  1.2m.txt  1.3m.txt  1.4m.txt  (+42 more)
Machine learning/coursework/report/: 00-title.tex  10-introduction.tex  20-analyth.tex  30-design.tex  40-implement.tex  50-research.tex  60-conclusion.tex  main-page.tex  preambule.inc.tex  ref-lib.bib
Machine learning/labs/: readme.md
Machine learning/labs/lab_01/: lab1_1.ipynb  lab1_2.ipynb
Machine learning/labs/lab_02/: lab_2.ipynb
Machine learning/labs/lab_03/: lab_3.ipynb
Machine learning/labs/lab_04/: lab_4.ipynb
Machine learning/labs/lab_05/: lab_5.ipynb
Machine learning/labs/lab_06/: lab_6.ipynb
Machine learning/labs/lab_07/: lab_7_new.ipynb
Machine learning/labs/lab_09/: lab_9.ipynb  lab_9_2.ipynb
Machine learning/labs/lab_10/: lab_10.ipynb
Neuro-fuzzy systems/: readme.md
Neuro-fuzzy systems/labs/: NFS_lab_1.ipynb  NFS_lab_2.ipynb  NFS_lab_3.ipynb  NFS_lab_4.ipynb  readme.md
OII/: readme.md
OII/labs/lab_03/code/: Acor.py  Constants.py  aco.py  genetic.py  pyproject.toml
OII/labs/lab_05/code/: pyproject.toml
OII/labs/lab_05/code/lab_05/: cat.py  knuth.py
OII/labs/lab_05/code/texts/: Кнут-том-1.txt
OII/labs/lab_06/code/: main.py  pyproject.toml
(+171 files in other folders)
