[tool.poetry]
name = "lab-05"
version = "0.1.0"
description = ""
authors = ["Inspirate789 <andreysapozhkov535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
markovify = "^0.9.4"
textract = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
