[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Inspirate789 <andreysapozhkov535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.10.0.84"
pytesseract = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
